increment correct, wrong & unanswered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,9 @@
 .choice {
     min-height: 20px;
     min-width: 100px;
+    cursor: pointer;
+}
+
+.choice:hover {
+    text-decoration: underline;
 }
